# NovaTerminal

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  NovaTerminal.sln  README.internal.md  README.md  build_err.txt  build_errors.txt  build_errors_2.txt  build_errors_3.txt  renovate.json  test.ps1  test.sh  test_results.txt  test_sixel.py  verify_perf.py
.github/: renovate.json
NovaTerminal.Benchmarks/: FuzzTarget.cs  NovaTerminal.Benchmarks.csproj  ParserBenchmarks.cs  Program.cs  ScrollbackBenchmarks.cs  build_error_benchmarks.txt
NovaTerminal.Tests/: AlternateScreenTests.cs  CMDDuplicationTests.cs  DecModeTests.cs  GoldenMasterTests.cs  GraphemeAttachmentTests.cs  GraphicsTests.cs  HeadlessUITests.cs  MouseReportingTests.cs  NovaTerminal.Tests.csproj  OhMyPoshTests.cs  OscUxTests.cs  PendingWrapTests.cs  PowerShellBehaviorTests.cs  PowerShellCursorPositionTests.cs  PowerShellDiagnosticTests.cs  PowerShellSparsePromptTests.cs  ReflowRegressionTests.cs  ReflowScenariosTests.cs  ReproductionTests.cs  SgrAttributeTests.cs  SurrogateTests.cs  TerminalBufferTests.cs  TestAppBuilder.cs  ThemeSwitchBehaviorTests.cs  UnitTest1.cs  VttestScenarioTests.cs  test_build_error.txt  test_build_error_2.txt  (+1 more)
src/NovaTerminal.App/native/: Cargo.toml  errors.txt
src/NovaTerminal.App/native/rusty_ssh/: Cargo.toml
src/NovaTerminal.App/native/rusty_ssh/examples/: smoke.rs
src/NovaTerminal.App/native/rusty_ssh/src/: lib.rs
src/NovaTerminal.App/native/rusty_ssh/tests/: ffi_contract.rs
src/NovaTerminal.App/native/src/: lib.rs
(+1277 files in other folders)
