[package]
name = "rusty_pty"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
portable-pty = "0.9"
libc = "0.2"
anyhow = "1.0"
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_Pipes"] }
