[package]
name = "rusty_ssh"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
libc = "0.2"
russh = { version = "0.59.0", default-features = false, features = ["ring"] }
russh-sftp = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48.0", features = ["fs", "io-util", "net", "rt", "sync", "time"] }
